--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -6,5 +6,18 @@ services:
       context: ..
       dockerfile: docker/Dockerfile.test
     image: ${IMAGE:-pipdevs/test}
+    depends_on:
+      - couchbase
+    environment:
+      - COUCHBASE_HOST=couchbase
+      - COUCHBASE_PORT=8091
+      - COUCHBASE_USER=Administrator
+      - COUCHBASE_PASS=password
 
+  couchbase:
+    image: couchbase/server-sandbox:6.0.1
+    #container_name: couchbase
+    # ports:
+    #   - "8091-8094:8091-8094"
+      # - "11210-11211:11210-11211"
           
